# ChangeLog for sys-kernel/cdfs
# Copyright 2004 Christian Gmeiner; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/sys-kernel/love-sources/ChangeLog,v 1.5 2004/07/26 22:14:29 austriancoder Exp $

*love-sources-2.6.8_rc2-r3.ebuild (27 July 2004)

  27 July 2004; Christian Gmeiner <christian at visual-page dot de>
  version bump

*love-sources-2.6.8_rc2-r2.ebuild (23 July 2004)

  23 July 2004; Christian Gmeiner <christian at visual-page dot de>
  version bump

*love-sources-2.6.8_rc2-r1.ebuild (19 July 2004)

  19 July 2004; Christian Gmeiner <christian at visual-page dot de>
  version bump

*love-sources-2.6.8_rc1-r1.ebuild (18 July 2004)

  18 July 2004; Christian Gmeiner <christian at visual-page dot de>
  version bump

*love-sources (19 June 2004)

  19 June 2004; Christian Gmeiner <christian at visual-page dot de>
  Inital ebuilds.