@@ -4,11 +4,12 @@ MD5 b70495ee5aaf817128398641a5753ab4 love-sources-2.6.6-r4.ebuild 1422
 MD5 5690d790d7f98c99c3aa8e61170461a4 love-sources-2.6.7_rc1-r1.ebuild 1651
 MD5 1a9a2aebf0d66cc9d5209f2397ddab67 love-sources-2.6.7_rc3-r1.ebuild 1651
 MD5 e92bd8126ca15e4f23bdbdb2252fd8b8 love-sources-2.6.7_rc3-r2.ebuild 1780
-MD5 e6258ece0e4c51ad5873bf19cffb24c4 ChangeLog 735
+MD5 20481730b1dcdbd44e8c2b3fa484b5ad ChangeLog 869
 MD5 71b373a6cb865b937141bd97e4ff234d love-sources-2.6.8_rc1-r1.ebuild 1775
 MD5 bc781a3099ab6ac11ac324918ee34687 love-sources-2.6.8_rc2-r1.ebuild 1928
 MD5 6b843e8d38616e7f4aeab18738fe2f33 love-sources-2.6.8_rc2-r2.ebuild 1871
-MD5 b846a731c86400716476d75fd113b8fc love-sources-2.6.8_rc2-r3.ebuild 1745
+MD5 cb5af875070afd2b43bbbcf80f54b9b0 love-sources-2.6.8_rc2-r3.ebuild 1878
+MD5 ed28e89c865be2e3c61ef1a63889fad5 love-sources-2.6.8_rc4-r2.ebuild 1736
 MD5 89fff60c4dbe945422b16307d4e4f1f4 files/digest-love-sources-2.6.6_rc3-r4 257
 MD5 668d09e4ef3eadf7709275cbeae2b949 files/digest-love-sources-2.6.6-r5 186
 MD5 41a64fba7285ed895455cb4b2616d632 files/digest-love-sources-2.6.6-r4 127
@@ -19,3 +20,4 @@ MD5 71ef8771fc87aeecf6c00b7cdb538c69 files/digest-love-sources-2.6.8_rc1-r1 258
 MD5 8fc754ac871864b89577fd1e6d2dac67 files/digest-love-sources-2.6.8_rc2-r1 195
 MD5 e9c56b5bf2e6d7b1ee6fccab4e55d022 files/digest-love-sources-2.6.8_rc2-r2 195
 MD5 7eab443b7ecd032f839841c5ca5c9264 files/digest-love-sources-2.6.8_rc2-r3 196
+MD5 57fa90941c165bb0a68ead74a5b4d826 files/digest-love-sources-2.6.8_rc4-r2 196
