@@ -1,0 +1,3 @@
+MD5 3fa26816f4e298daccae3e94ec6c8144 patch-2.6.8-rc4.bz2 3604307
+MD5 a74671ea68b0e3c609e8785ed8497c14 linux-2.6.7.tar.bz2 35092228
+MD5 1c6816ff4ece57409c18ca0237d4fb0e 2.6.8-rc4-love2.bz2 1025519
