@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/cdfs
 # Copyright 2004 Christian Gmeiner; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/sys-kernel/love-sources/ChangeLog,v 1.5 2004/07/26 22:14:29 austriancoder Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/sys-kernel/love-sources/ChangeLog,v 1.6 2004/08/14 00:43:45 austriancoder Exp $
+
+* love-sources-2.6.8_rc4-r2.ebuild (14 Aug 2004)
+
+  14 Aug 2004; Christian Gmeiner <christian at visual-page dot de>
+  version bump
 
 *love-sources-2.6.8_rc2-r3.ebuild (27 July 2004)
 
